Game funktioniert zu 95%